重新编辑分享页面的内容
Signed-off-by: 张之韬 <ztzhang@che300.com>

--- a/che300分享/20190509/H5页面中布局的实践与思考.md
+++ b/che300分享/20190509/H5页面中布局的实践与思考.md
@@ -1,12 +1,10 @@
-1. ## H5页面中布局的实践与思考
+# H5页面中布局的实践与思考
 
-   > 本次分享基于开发过程中的一些实例,总结一些方法
+> 本次分享基于开发过程中的一些实例,总结一些方法
 
-   高保真图
+<img src="./img-01.png">
 
-   <img src="/Users/zhangzhitao/front-end-note/che300%E5%88%86%E4%BA%AB/20190509/img-01.png">
-
-   问: 图中红色框区域内的布局,我们如何能做到
+问: 图中红色框区域内的布局,我们如何能做到
 
    1. 具有良好的兼容性
    2. 具有良好的自适应
@@ -49,8 +47,6 @@
    input这类的替换元素实现任意比例的自适应的最优布局是怎么样呢?
 
    本次分享涉及到的知识点罗列,方便小伙伴后面查漏补缺
-
-   
 
    1. 浮动(清除浮动的原理)
    2. BFC
